--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I’m an EECS student with a love for design, code, and innovation. Welcome to my digital garden 🌱</p>
+    <p>I’m an EECS student with a love for design, code, and innovation. Hi how are you doing? 🌱</p>
   </section>
 
   <section class="projects">
