--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     This is a website I created to share my experiences and achievements.</p>
     
-    <img src="headshot.jpg" alt="Srihita smiling" class="about-photo" />
+    <img src="headshot_srihita.jpg" alt="Srihita smiling" class="about-photo" />
 
   </section>
 
