--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Hello, my name is Srihita and I'm currently a sophomore studying Electrical Engineering Computer Science at Contra Costa College. I will be txransferring to UC Davis in the Fall to complete my Bachelor's. <br><br>
+    <p>Hello, my name is Srihita and I'm currently a sophomore studying Electrical Engineering Computer Science at Contra Costa College. I will be transferring to UC Davis in the Fall to complete my Bachelor's. <br><br>
       
       I'm interested in Web Development, Environmental Sustainability, and Health x Technology.
     
