--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a>
-    <a href="aboutme.html">About Me</a>
-    <a href="projects.html">My Experience</a>
+    <a href="index.html">About Me</a>
+    <a href="experience.html">My Experience</a>
     </div>
 
   <!-- Toggle button -->
