--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </section>
 
   <footer>
-    <p>Let’s connect — srihitapanati21@gmail.com</p>
+    <p>Let’s connect — srihitapanati21@gmail.com | www.linkedin.com/in/srihitapanati | (510)-241-6088 </p>
   </footer>
 
   <script>
