--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   </section>
 
   <section class="projects">
-    <h2>Projects</h2>
+    <h2>Hobbies</h2>
     <ul>
-      <li>🤖 EMG Signal Classification (Python + Deep Learning)</li>
-      <li>📱 Scheduling App for Teachers</li>
-      <li>💡 Lake Merritt Environmental Research</li>
+      <li> Biker</li>
+      <li> Violinist</li>
+      <li> Badminton Player</li>
     </ul>
   </section>
 
