--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
       </div>
       
        <div class="experience-item">
-        <h3>After-School Teacher</h3>
+        <h3>After-School Teacher, YouthCodeNow</h3>
         <p><strong>Sept 2023 - Jun 2024</strong></p>
         <p>Developed a scheduling app for teachers under a CS professor. Designed layout, learned new tools, and presented progress in weekly meetings.</p>
       </div>
