--- a/experience.html
+++ b/experience.html
@@ -27,29 +27,36 @@
     <section class="experience">
       <h2>My Experience</h2>
 
-      <div class="experience-item">
-        <h3>Technology Intern, MCE</h3>
-        <p><strong>Jan 2025 - Present</strong></p>
-        <p>Worked on classifying EMG signals using deep learning models and automated data analysis tools in Python. Achieved 90%+ accuracy and reduced manual work by building visualization tools.</p>
-      </div>
+    /* Experience Section Styling */
+    .experience {
+    padding: 2rem;
+    max-width: 800px;
+    margin: auto;
+    }
 
-      <div class="experience-item">
-        <h3>Scheduling App Developer, Contra Costa College</h3>
-        <p><strong>August 2024</strong></p>
-        <p>Taught introductory programming to middle school students using Scratch. Created engaging lesson plans and encouraged creativity through projects.</p>
-      </div>
+  .experience-item {
+    background-color: #ffe4ec; /* Light pink background */
+    padding: 1.5rem;
+    border-radius: 12px;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+  
+  .experience-item h3 {
+    margin-top: 0;
+    color: #333;
+  }
+  
+  .experience-item p {
+    margin: 0.5rem 0;
+  }
+  
+  .experience-item:hover {
+    background-color: #faa7c0; /* Slightly deeper pink on hover */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
 
-      <div class="experience-item">
-        <h3>Research Intern, San Francisco State University</h3>
-        <p><strong>June 2024 - July 2024</strong></p>
-        <p>Developed a scheduling app for teachers under a CS professor. Designed layout, learned new tools, and presented progress in weekly meetings.</p>
-      </div>
-      
-       <div class="experience-item">
-        <h3>After-School Teacher, YouthCodeNow</h3>
-        <p><strong>Sept 2023 - Jun 2024</strong></p>
-        <p>Developed a scheduling app for teachers under a CS professor. Designed layout, learned new tools, and presented progress in weekly meetings.</p>
-      </div>
     </section>
   </div> <!-- End of #main -->
 
