--- a/experience.html
+++ b/experience.html
@@ -141,19 +141,19 @@
       <div class="experience-item">
         <h3>Technology Intern, MCE</h3>
         <p><strong>Jan 2025 - Present</strong></p>
-        <p>Worked on classifying EMG signals using deep learning models and automated data analysis tools in Python. Achieved 90%+ accuracy and reduced manual work by building visualization tools.</p>
+        <p>At MCE, I developed a customer-facing web portal integrated with their Salesforce org to improve service accessibility and user experience. I'm also working on setting up data security measures to ensure safe and compliant handling of customer information.</p>
       </div>
 
       <div class="experience-item">
         <h3>Scheduling App Developer, Contra Costa College</h3>
         <p><strong>August 2024</strong></p>
-        <p>Developed a scheduling app for teachers under a CS professor. Designed layout, learned new tools, and presented progress in weekly meetings.</p>
+        <p>Over the summer, I designed and built a scheduling app for teachers at Contra Costa College. I self-learned a new software platform, developed the app’s structure and layout, and presented regular progress updates to a computer science professor.</p>
       </div>
 
       <div class="experience-item">
         <h3>Research Intern, San Francisco State University</h3>
         <p><strong>June 2024 - July 2024</strong></p>
-        <p>Handled large EMG data sets and built automated Python tools to process and visualize results. Calibrated equipment, conducted experiments, and collaborated with mentors.</p>
+        <p>Collaborated with a graduate student mentor at San Francisco State University to research EMG signal processing. Developed Python tools for large-scale data analysis, reducing manual workload by automating statistical calculations and visualization. Contributed to a deep learning model for gesture recognition with 90%+ accuracy.</p>
       </div>
 
       <div class="experience-item">
